--- a/requirements.txt
+++ b/requirements.txt
@@ -28,11 +28,14 @@ Flask==3.0.0
 flatbuffers==25.1.24
 frozenlist==1.5.0
 fsspec==2025.2.0
+gevent==24.11.1
 google-auth==2.38.0
 googleapis-common-protos==1.66.0
+greenlet==3.1.1
 grpcio==1.70.0
-gunicorn==20.1.0
+gunicorn==23.0.0
 h11==0.14.0
+honcho==2.0.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
@@ -125,3 +128,5 @@ Werkzeug==3.1.3
 wrapt==1.17.2
 yarl==1.18.3
 zipp==3.21.0
+zope.event==5.0
+zope.interface==7.2
